<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.intellias.osm</groupId>
    <artifactId>osm-nds-live-compiler</artifactId>
    <version>1.0-SNAPSHOT</version>


    <name>osm-compiler</name>
    <url>http://maven.apache.org</url>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <scala.version>2.13.10</scala.version>
        <scala.compat.version>2.13</scala.compat.version>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.assembly.version>3.6.0</maven.assembly.version>
        <scalatest.version>3.2.10</scalatest.version>
        <spec2.version>4.20.0</spec2.version>
        <spark.version>3.3.2</spark.version>
        <resources.plugin.version>3.3.0</resources.plugin.version>
        <osmosis.version>0.48.3</osmosis.version>
        <scala-maven-plugin.version>4.8.1</scala-maven-plugin.version>
        <geotools.version>28.0</geotools.version>
        <live.nds.version>1.0.6-2023.09-a905f21</live.nds.version>
    </properties>

    <repositories>
        <repository>
            <id>intellias-oss-maven</id>
            <url>https://gitlab.com/api/v4/groups/70106860/-/packages/maven</url>
        </repository>
        <repository>
            <id>central</id>
            <name>Maven Central</name>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
        <repository>
            <name>GeoTools Repository</name>
            <id>geo tools</id>
            <url>https://repo.osgeo.org/repository/geotools-releases/</url>
        </repository>
    </repositories>

    <build>
        <sourceDirectory>src/main/scala</sourceDirectory>
        <testSourceDirectory>src/test/scala</testSourceDirectory>
        <plugins>
            <plugin>
                <!-- see http://davidb.github.com/scala-maven-plugin -->
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>${scala-maven-plugin.version}</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <jvmArgs>
                        <jvmArg>-Xss2m</jvmArg>
                    </jvmArgs>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>testCompile</goal>
                        </goals>
                        <configuration>
                            <args>
                                <arg>-dependencyfile</arg>
                                <arg>${project.build.directory}/.scala_dependencies</arg>
                            </args>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.21.0</version>
                <configuration>
                    <!-- Tests will be run with scalatest-maven-plugin instead -->
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.scalatest</groupId>
                <artifactId>scalatest-maven-plugin</artifactId>
                <version>2.2.0</version>
                <configuration>
                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                    <junitxml>.</junitxml>
                    <filereports>TestSuiteReport.txt</filereports>
                    <argLine>
                        --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
                        --add-opens=java.base/java.lang=ALL-UNNAMED
                        --add-opens=java.base/java.nio=ALL-UNNAMED
                        --add-opens=java.base/java.util=ALL-UNNAMED
                        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
                        --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
                        --add-opens=java.base/sun.security.action=ALL-UNNAMED
                        --add-opens=java.base/java.io=ALL-UNNAMED
                        --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
                    </argLine>
                </configuration>
                <executions>
                    <execution>
                        <id>test</id>
                        <goals>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${maven.assembly.version}</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <mainClass>com.intellias.osm.Main</mainClass>
                        </manifest>
                        <manifestEntries>
                            <Add-Opens>java.base/java.lang java.base/java.nio java.base/java.util java.base/java.lang.reflect java.base/java.lang.invoke java.base/sun.security.action java.base/java.io</Add-Opens>
                            <Add-Exports>java.base/sun.nio.ch jdk.unsupported/sun.misc</Add-Exports>
                        </manifestEntries>
                    </archive>
                    <filters>
                        <filter>**/Log4j2Plugins.dat</filter>
                        <filter>**/mapping/</filter>
                    </filters>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <!--  Apache License, Version 2.0 (the “License”). https://www.scala-lang.org/license/ -->
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>${scala.version}</version>
        </dependency>

        <dependency>
            <!-- Apache License 2.0 https://github.com/apache/spark/blob/master/LICENSE -->
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-core_${scala.compat.version}</artifactId>
            <version>${spark.version}</version>
        </dependency>
        <dependency>
            <!-- Apache License 2.0 https://github.com/apache/spark/blob/master/LICENSE -->
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_${scala.compat.version}</artifactId>
            <version>${spark.version}</version>
        </dependency>
        <dependency>
            <!-- Apache License 2.0 https://github.com/apache/spark/blob/master/LICENSE -->
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-graphx_${scala.compat.version}</artifactId>
            <version>${spark.version}</version>
        </dependency>
        <dependency>
            <!-- Apache License, Version 2.0 https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api/2.19.0 -->
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.19.0</version>
        </dependency>
        <dependency>
            <!-- Apache License, Version 2.0 https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core/2.19.0 -->
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.19.0</version>
        </dependency>
        <dependency>
            <groupId>live.nds</groupId>
            <artifactId>modules</artifactId>
            <version>${live.nds.version}</version>
        </dependency>
        <dependency>
            <!--  Eclipse Public License 2.0 ("EPL") or the Eclipse Distribution License 1.0 (a BSD Style License) https://github.com/locationtech/jts/blob/master/LICENSES.md -->
            <groupId>org.locationtech.jts</groupId>
            <artifactId>jts-core</artifactId>
            <version>1.19.0</version>
        </dependency>

        <dependency>
            <!-- Apache 2.0 License https://mvnrepository.com/artifact/com.typesafe.scala-logging/scala-logging_3/3.9.4 -->
            <groupId>com.typesafe.scala-logging</groupId>
            <artifactId>scala-logging_${scala.compat.version}</artifactId>
            <version>3.9.4</version>
        </dependency>
        <dependency>
            <!-- Apache License 2.0 https://github.com/FasterXML/jackson-module-scala/blob/2.16/LICENSE -->
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-scala_${scala.compat.version}</artifactId>
            <version>2.14.1</version>
            <exclusions>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-databind</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <!-- Apache License 2.0 https://github.com/FasterXML/jackson-databind/blob/2.16/LICENSE -->
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.14.0</version>
        </dependency>
        <dependency>
            <!--Mozilla Public License 2.0 https://github.com/pureconfig/pureconfig/blob/master/LICENSE -->
            <groupId>com.github.pureconfig</groupId>
            <artifactId>pureconfig_${scala.compat.version}</artifactId>
            <version>0.17.3</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.typesafe.play/play-json -->
        <dependency>
            <groupId>com.typesafe.play</groupId>
            <artifactId>play-json_${scala.compat.version}</artifactId>
            <version>2.9.4</version>
        </dependency>

        <dependency>
            <groupId>au.id.jazzy</groupId>
            <artifactId>play-geojson_${scala.compat.version}</artifactId>
            <version>1.7.0</version>
        </dependency>

        <dependency>
            <!-- MIT license https://github.com/simonpoole/OpeningHoursParser/blob/master/LICENCE.txt -->
            <groupId>ch.poole</groupId>
            <artifactId>OpeningHoursParser</artifactId>
            <version>0.27.0</version>
        </dependency>

        <dependency>
            <!-- Apache License 2.0 https://www.apache.org/licenses/-->
            <groupId>org.apache.sedona</groupId>
            <artifactId>sedona-spark-shaded-3.0_${scala.compat.version}</artifactId>
            <version>1.4.1</version>
        </dependency>

        <dependency>
            <!-- Apache License, Version 2.0  https://github.com/TakahikoKawasaki/nv-i18n#license-->
            <groupId>com.neovisionaries</groupId>
            <artifactId>nv-i18n</artifactId>
            <version>1.29</version>
        </dependency>

        <dependency>
            <groupId>com.github.tototoshi</groupId>
            <artifactId>scala-csv_${scala.compat.version}</artifactId>
            <version>1.3.10</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/ch.hsr/geohash -->
        <dependency>
            <groupId>ch.hsr</groupId>
            <artifactId>geohash</artifactId>
            <version>1.4.0</version>
        </dependency>
        <dependency>
            <groupId>com.intellias.mobility.geo</groupId>
            <artifactId>spatial-tools_${scala.compat.version}</artifactId>
            <version>0.1-fce10ee</version>
        </dependency>

        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-epsg-hsql</artifactId>
            <version>24.0</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-main</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-geojson</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-referencing</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-coverage</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-arcgrid</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-shapefile</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-geotiff</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-opengis</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.45.0.0</version>
        </dependency>
        <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>s3</artifactId>
            <version>2.21.29</version>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>org.scalatest</groupId>
            <artifactId>scalatest_${scala.compat.version}</artifactId>
            <version>${scalatest.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.specs2</groupId>
            <artifactId>specs2-core_${scala.compat.version}</artifactId>
            <version>${spec2.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.specs2</groupId>
            <artifactId>specs2-junit_${scala.compat.version}</artifactId>
            <version>${spec2.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.holdenkarau</groupId>
            <artifactId>spark-testing-base_${scala.compat.version}</artifactId>
            <version>3.3.1_1.4.0</version>
            <scope>test</scope>
        </dependency>


    </dependencies>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.4.5</version>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>dependencies</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
        </plugins>
    </reporting>
</project>
